fix loading offset and wrap header

--- a/app/assets/stylesheets/app/popover.css.less
+++ b/app/assets/stylesheets/app/popover.css.less
@@ -1,5 +1,5 @@
 .framed {
-  #mainnav {
+  #header {
     display:none;
   }
 }
